fix(list): update align number to top

--- a/apps/frontend/src/components/ListNews/Styles.module.css
+++ b/apps/frontend/src/components/ListNews/Styles.module.css
@@ -1,6 +1,9 @@
 a {
   text-decoration: none;
-  all: unset;
+}
+
+a span:hover {
+  color: orangered;
 }
 
 .hidden {
@@ -60,4 +63,16 @@ a {
   padding: 0px;
   width: fit-content;
   background-color: transparent;
+}
+
+li {
+  display: block;
+}
+
+li:before {
+  content: attr(value) ' ';
+  vertical-align: top;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 10pt;
+  color: #222020;
 }
